--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
         <title>Snake</title>
     </head>
     <body>
-        <canvas id='canvas' width="500" height="500" style="background-color: lightgray"></canvas>
+        <canvas id='background-canvas' width="500" height="500" style="background-color: black; z-index: 0; position: fixed;"></canvas>
+        <canvas id='canvas' width="500" height="500" style="background-color: transparent; z-index: 1; position: fixed;"></canvas>
         <script src="game.js"></script>
     </body>
 </html>
